Implementing login page, main dashboard, interfaces and services.

--- a/src/app/layout/topnav/topnav.component.html
+++ b/src/app/layout/topnav/topnav.component.html
@@ -4,6 +4,6 @@
   </div>
   <span class="nav-spacer"></span>
   <button mat-icon-button (click)="toggle()">
-    <mat-icon>Toggle sidebar</mat-icon>
+    Toggle
   </button>
 </mat-toolbar>
