--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,14 +7,14 @@
       <div>
         <div>
           <mat-form-field class="w-100">
-            <input matInput placeholder="Email">
+            <input matInput placeholder="Email" [(ngModel)]="username">
           </mat-form-field>
         </div>
       </div>
       <div>
         <div>
           <mat-form-field class="w-100">
-            <input matInput type="password" placeholder="Password">
+            <input matInput type="password" placeholder="Password" [(ngModel)]="password">
           </mat-form-field>
         </div>
       </div>
