Implementing filter search functionality for members.

--- a/src/app/member/member.component.scss
+++ b/src/app/member/member.component.scss
@@ -5,3 +5,12 @@ table {
 th.mat-sort-header-sorted {
   color: black;
 }
+
+#selectFilter {
+  width: 30%;
+  float: right;
+}
+
+#search {
+  margin-left: 5px;
+}
