--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -1,5 +1,16 @@
 <mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  <input matInput [(ngModel)]="filterValue" placeholder="Filter">
+
+</mat-form-field>
+<button id="search" mat-raised-button color="primary" (click)="applyFilter(filterValue)">Search</button>
+
+<mat-form-field id="selectFilter">
+  <mat-label>Find by</mat-label>
+  <mat-select [(ngModel)]="selectedOption">
+    <mat-option *ngFor="let option of options" [value]="option.value">
+      {{option.viewValue}}
+    </mat-option>
+  </mat-select>
 </mat-form-field>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
@@ -16,15 +27,20 @@
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="cardNumber">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Card number </th>
-    <td mat-cell *matCellDef="let element"> {{element.cardNumber}} </td>
+  <ng-container matColumnDef="state">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> State </th>
+    <td mat-cell *matCellDef="let element"> {{element.state}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="city">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> City </th>
     <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="buttons">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element"> <button mat-raised-button color="primary">Edit</button></td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
