EVO GA NAPOKON JEBEMU

--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -43,7 +43,7 @@
 
   <ng-container matColumnDef="buttons">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary">Edit</button></td>
+    <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary" [routerLink]="'../editMember/' + element.id">Edit</button></td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
