--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <a mat-list-item [routerLink]="['member']">
       <mat-icon class="sidenav-icon">Members</mat-icon>
     </a>
-    <a mat-list-item>
+    <a mat-list-item  [routerLink]="['tickets']">
       <mat-icon class="sidenav-icon">Tickets</mat-icon>
     </a>
     <a mat-list-item>
