--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -41,9 +41,14 @@
     <td mat-cell *matCellDef="let element"> {{element.city}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="buttons">
+  <ng-container matColumnDef="edit">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary" [routerLink]="'../editMember/' + element.id">Edit</button></td>
+  </ng-container>
+
+  <ng-container matColumnDef="delete">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary" (click)="onDelete(element.id)">Delete</button></td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
