--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,1 +1,48 @@
-<p>documents works!</p>
+<div style="width: 100%">
+  <a id="addDocument"><button mat-raised-button color="accent">Add</button></a>
+</div>
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+  <!-- Position Column -->
+  <ng-container matColumnDef="event">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Event </th>
+    <td mat-cell *matCellDef="let element"> {{element.event}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+    <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="eventDate">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Event Date </th>
+    <td mat-cell *matCellDef="let element"> {{element.eventDate}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="totalPrice">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Price </th>
+    <td mat-cell *matCellDef="let element"> {{element.totalPrice}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="info">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary" [routerLink]="'../infoDocument/' + element.id">Edit</button></td>
+  </ng-container>
+
+  <ng-container matColumnDef="edit">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary" [routerLink]="'../editDocument/' + element.id">Edit</button></td>
+  </ng-container>
+
+  <ng-container matColumnDef="delete">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary" (click)="onDelete(element.id)">Delete</button></td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<mat-paginator [length]="totalElements" [pageSizeOptions]="[10, 25, 50]" (page)="onPageChange()" showFirstLastButtons></mat-paginator>
+
