--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -31,9 +31,9 @@
     <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary" [routerLink]="'../infoDocument/' + element.id">Edit</button></td>
   </ng-container>
 
-  <ng-container matColumnDef="edit">
+  <ng-container matColumnDef="export">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary" [routerLink]="'../editDocument/' + element.id">Edit</button></td>
+    <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary">Export</button></td>
   </ng-container>
 
   <ng-container matColumnDef="delete">
