--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -33,7 +33,7 @@
 
   <ng-container matColumnDef="export">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary">Export</button></td>
+    <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary" (click)="onExport(element.id)">Export</button></td>
   </ng-container>
 
   <ng-container matColumnDef="delete">
