--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,5 +1,5 @@
 <div style="width: 100%">
-  <a id="addDocument"><button mat-raised-button color="accent">Add</button></a>
+  <a id="addDocument" [routerLink]="'../createDocument'"><button mat-raised-button color="accent">Add</button></a>
 </div>
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
   <!-- Position Column -->
