--- a/src/app/documents/info/info.component.html
+++ b/src/app/documents/info/info.component.html
@@ -1,8 +1,15 @@
 <form [formGroup]="documentForm" (ngSubmit)="onSubmit()" *ngIf="documentForm">
   <div class="container">
     <div class="left">
-      <mat-form-field>
-        <input  matInput placeholder="Event" formControlName="event">
+      <mat-form-field appearance="fill">
+        <mat-label>EVENTS</mat-label>
+        <select matNativeControl formControlName="event" required>
+          <option value="HOME_GAME">HOME_GAME</option>
+          <option value="AWAY_GAME">AWAY_GAME</option>
+          <option value="TRIP">TRIP</option>
+          <option value="EVENT_ANNIVERSARY">EVENT_ANNIVERSARY</option>
+          <option value="OTHER">OTHER</option>
+        </select>
       </mat-form-field>
       <mat-form-field>
         <input  matInput placeholder="Description" formControlName="description">
@@ -22,7 +29,7 @@
       </mat-form-field>
     </div>
     <div class="right">
-      <mat-form-field class="example-full-width">
+      <mat-form-field *ngIf="editToggled || editMode === 'CREATE' " class="example-full-width">
         <mat-label>Members</mat-label>
         <input type="text"
                placeholder="Pick one"
@@ -30,14 +37,14 @@
                matInput
                [matAutocomplete]="auto"
         >
-        <mat-autocomplete #auto="matAutocomplete"  (optionSelected)='addMember($event.option.value)'>
-          <mat-option *ngFor="let member of allMembers" [value]="member" [disabled]="alreadyPicked(member.id)">
+        <mat-autocomplete #auto="matAutocomplete"  [displayWith]="displayFn" (optionSelected)='addMember($event.option.value)'>
+          <mat-option *ngFor="let member of allMembers" [value]="member"  [disabled]="alreadyPicked(member.id)">
             {{member.firstName + " " + member.lastName}}
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
       <div>
-        <button *ngIf="editMode === 'INFO' && editToggled"  type="submit" mat-raised-button color="primary" [disabled]="!documentForm.valid">Accept</button>
+        <button *ngIf="(editMode === 'INFO' && editToggled ) || editMode === 'CREATE'"  type="submit" mat-raised-button color="primary" [disabled]="!documentForm.valid">Accept</button>
         <button *ngIf="editMode === 'INFO'" mat-raised-button type="button" color="primary" style="margin-left: 1%" (click)="resetForm()">{{editToggled ? "Cancel edit" : "Edit document" }}</button>
       </div>
     </div>
@@ -59,7 +66,7 @@
     </ng-container>
     <ng-container matColumnDef="remove">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element;"> <button mat-raised-button color="primary" (click)="removeMember(element.id)">Export</button></td>
+      <td mat-cell *matCellDef="let element;"> <button  *ngIf="editToggled" mat-raised-button color="primary" (click)="removeMember(element.id)">Remove</button></td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -67,4 +74,6 @@
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
+
+
 
