--- a/src/app/layout/topnav/topnav.component.html
+++ b/src/app/layout/topnav/topnav.component.html
@@ -3,6 +3,9 @@
     SB Admin Material
   </div>
   <span class="nav-spacer"></span>
+  <button mat-icon-button  [ngStyle]="{'margin-right': '20px'}" (click)="logout()">
+    Logout
+  </button>
   <button mat-icon-button (click)="toggle()">
     Toggle
   </button>
