--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
       <div>
         <div>
           <mat-form-field class="w-100">
-            <input matInput placeholder="Email" [(ngModel)]="username">
+            <input matInput placeholder="Username" [(ngModel)]="username">
           </mat-form-field>
         </div>
       </div>
