--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="content">
     <div class="login-form">
       <div class="text-center">
-        <h2 class="app-name">Sb Admin Material</h2>
+        <h2 class="app-name">Welcome, login please</h2>
       </div>
       <div>
         <div>
@@ -19,9 +19,6 @@
         </div>
       </div>
       <div style="margin: 20px 0 30px 0">
-        <div>
-          <mat-checkbox color="primary">Remember Me</mat-checkbox>
-        </div>
       </div>
       <div>
         <div>
